# reko

./: .editorconfig  .env  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  compose.yml  init-user-db.sh  manage.py  mypy.ini  package-lock.json  package.json  prod.env.enc  pyproject.toml  reko.code-workspace  setup.cfg  tailwind.config.js  tsconfig.json
.github/actions/: setup-env.yml
.github/actions/setup-env/: action.yml
.github/workflows/: backend.yml  build.yml  frontend.yml  main.yml  python.yml
client/: main.css  main.ts
docs/: conf.py  index.md
reko/: urls.py
reko/content/: about.md  index.md
reko/reko/: admin.py  admin_test.py  cart.py  components.py  constants.py  factories.py  format_price.py  formatters.py  formatters_test.py  forms.py  models.py  models_test.py  symbols.py  test_formatters.py  validators.py  validators_test.py  views.py  views_test.py
reko/reko/demo_data/: cli.py  demo_data.py
reko/reko/migrations/: 0001_initial.py  0002_remove_product_items_in_stock.py  0002_rename_location_pickup_rename_location_order_pickup.py  0003_alter_order_email_alter_order_name_alter_order_note_and_more.py  0003_ring.py  0004_alter_orderproduct_options_and_more.py  0004_alter_user_options_user_producers_user_rings.py  0005_alter_location_place.py  0005_remove_pickup_producer_pickup_ring_producer_pickups.py  0006_location_end_time_location_start_time.py  0007_remove_producer_name_producer_company_name_and_more.py
reko/reko/utils/: email_debug_backend.py  vat.py  vat_test.py
reko/scripts/: dev_db_generate.py
reko/settings/: _base.py  dev.py  prod.py
reko/static/admin/css/: hide_fk_actions.css  hide_location_fk_actions.css  hide_original.css  hide_product_fk_actions.css
reko/static/reko/: reko.css
reko/templates/: about.html  index.html
reko/templates/admin/: base.html
scripts/: populate-dev-data  populate_dev_data.py
src/reko/: context_processors.py  settings.py  urls.py  wsgi.py
src/reko/occasion/: models.py
src/reko/occasion/migrations/: 0001_initial.py
src/reko/occassion/: models.py
src/reko/occassion/migrations/: 0001_initial.py
src/reko/order/: admin.py  forms.py  models.py  views.py
src/reko/order/migrations/: 0001_initial.py
src/reko/producer/: admin.py  constants.py  models.py
src/reko/producer/migrations/: 0001_initial.py  0002_producer_product_description.py
src/reko/producer/templatetags/: add_class.py  format_price.py
src/reko/sellers/: admin.py  models.py  views.py
src/reko/sellers/migrations/: 0001_initial.py  0002_seller_slug.py
src/reko/settings/: _base.py  dev.py  prod.py
src/reko/start/: views.py
src/reko/static/reko/: reko.css
src/reko/templates/: base.html  index.html  order.html  order_summary.html  seller.html
src/reko/templates/partials/: index_producers.html  seller.html
