[project]
name = "reko"
authors = [
  {name = "Andreas Pelme", email = "andreas@pelme.se"},
]

description = ""
version = "0.0.1"

dependencies = [
    "dj-database-url==2.1.0",
    "django==5.0.1",
    "django-extensions==3.2.3",
    "django-imagekit==5.0.0",
    "pillow==10.2.0",
    "psycopg2-binary==2.9.9",
]
requires-python = ">=3.12"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "django-stubs==4.2.7",
    "mypy==1.8.0",
    "flake8==3.9.2",
    "isort==5.9.3",
    "pdbpp==0.10.3",
    "pywatchman==1.4.1",
    "bpython==0.21",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
