[project]
authors = [
  {name = "Andreas Pelme", email = "andreas@pelme.se"},
  {name = "David Svenson", email = "davidsvenson@outlook.com"},
]
name = "reko"

description = ""
version = "0.0.1"

dependencies = [
  "dj-database-url==2.1.0",
  "django==5.0.10",
  "django-extensions==3.2.3",
  "django-imagekit==5.0.0",
  "pillow==10.3.0",
  "psycopg[binary]==3.1.19",
  "django-stubs-ext==5.0.2",
  "htpy==24.6.0",
  "gunicorn==23.0.0",
]
requires-python = ">=3.12"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
dev = [
  "mypy==1.10.0",
  "django-stubs==5.0.2",
  "ruff==0.9.2",
  "pdbpp==0.10.3",
  "bpython==0.24",
  "pre-commit==3.7.1",
  "pytest==8.3.4",
  "pytest-django==4.9.0",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
lint.ignore = [
  "B904", # allow normal raise
  "DJ008", # all models does not need __str__
]
lint.select = [
  "F", # Pyflakes
  "E", # pycodestyle error
  "W", # pycodestyle warning
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "TCH", # flake8-type-checking
  "RUF100", # yesqa equivalence
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "UP", # pyupgrade
  "TID", # flake8-tidy-imports
]

[tool.mypy]
files = ["reko"]
plugins = ["mypy_django_plugin.main"]
strict = true
strict_equality = true

[tool.django-stubs]
django_settings_module = "reko.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reko.settings.dev"

[project.scripts]
dev-db-generate = "reko.scripts.dev_db_generate:main"
