[project]
authors = [
  {name = "Andreas Pelme", email = "andreas@pelme.se"},
  {name = "David Svenson", email = "davidsvenson@outlook.com"},
]
name = "reko"

description = ""
version = "0.0.1"

dependencies = [
  "dj-database-url",
  "django>=5.2,<5.3",
  "django-extensions",
  "django-imagekit",
  "pillow",
  "psycopg[binary]",
  "django-stubs-ext",
  "htpy",
  "gunicorn",
  "sentry-sdk[django]>=2.47.0",
  "markdown",
  "types-markdown",
]
requires-python = ">=3.13,<3.14"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]>=5.2,<5.3",
  "ruff",
  "pre-commit",
  "pytest",
  "pytest-django",
  "factory-boy>=3.3.3",
  "types-factory-boy>=0.4.1",
  "time-machine>=3.2.0",
  {include-group = "docs"},
]
docs = [
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx-autobuild",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
lint.ignore = [
  "B904", # allow normal raise
  "DJ008", # all models does not need __str__
]
lint.select = [
  "F", # Pyflakes
  "E", # pycodestyle error
  "W", # pycodestyle warning
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "TCH", # flake8-type-checking
  "RUF100", # yesqa equivalence
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "UP", # pyupgrade
  "TID", # flake8-tidy-imports
]

[tool.mypy]
files = ["reko"]
plugins = ["mypy_django_plugin.main"]
strict = true
strict_equality = true

[tool.django-stubs]
django_settings_module = "reko.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "reko.settings.dev"
addopts = "--reuse-db"
python_files = "*_test.py"

[project.scripts]
dev-db-generate = "reko.reko.demo_data.cli:main"
